# mkpwd

./: .gitignore  AUTHORS  ChangeLog  FORK-INFO.md  Makefile  Makefile.am  README  autogen.sh  configure.ac  mkpwd.1  mkpwd.c
